# flappy_server

./: Cargo.toml  docker-compose.yml
sql_script/test/: init.sql
src/: core.rs  db_access.rs  error.rs  handlers.rs  main.rs  security.rs  state.rs
